# Ecco.IA-UPCT

./: .gitignore  Comandos.md  README.md  datos.md  docker-compose.yml  package-lock.json  test_models.py
ModelosMiguel/modelos_uptc_deploy/: metadata_sistema.pkl
backend/: .env.example  Dockerfile  alembic.ini  check_ids.py  check_infra.py  debug_campuses.py  inspect_metadata.py  populate_infra.py  pyproject.toml  requirements.txt  seed_campuses.py  seed_data.py  seed_history_data.py  test_chat_flow.py  test_dashboard_api.py  test_db_simple.py  test_login_api.py  test_ml_service.py
backend/alembic/: env.py
backend/alembic/versions/: 9e83f63789f1_initial_uptc_infrastructure.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/api/endpoints/: analytics.py  auth.py  campus.py  health.py  users.py
backend/app/core/: config.py  energy_logic.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  campus.py  infrastructure.py  user.py
backend/app/schemas/: auth.py  campus.py  health.py  user.py
backend/app/services/: anomaly_service.py  auth.py  gemini_service.py  historical_data_service.py  prediction_service.py  xai_service.py
backend/scripts/: seed_uptc.py
backend/tests/: test_api_e2e.py  test_chaos_inputs.py  test_edge_cases.py  test_load_stress.py  test_register_poly.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  main.jsx  (+1 more)
(+57 files in other folders)
